--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       content="personal website created using create-react-app"
     />
     <title>personal-website-react</title>
+    
+    <!--fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
